# slack-research-agent

./: .env.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  pyproject.toml
.agent/skills/gh-address-comments/: SKILL.md
.agent/skills/overleaf-git-sync/: SKILL.md
.agent/skills/private-project-bootstrap/: SKILL.md
.agent/skills/project-docs/: SKILL.md
.agent/skills/static-site-publish-triage/: SKILL.md
.agent/skills/visualization-task/: SKILL.md
.codex/: config.example.toml
docs/: mcp-integrations.md  operations.md  persistent-files.md  schemas.md  system-architecture.mmd  system-overview.md  user-guide.md
docs/dev/: roadmap.json
docs/protocols/: maintenance-protocols.md  slack-protocols.md
docs/workflows/: git-workflow.md  paper-writing-workflow.md  project-workflow.md  remote-gpu-workflow.md  research-workflow.md  skill-learning-workflow.md
scripts/: agent_flock  assemble_project_jsons.py  dashboard.sh  memory_recall  memory_reflect  project_worker.sh  register_submodules.sh  reset_task_list.sh  review_project.sh  run.sh  supervisor_loop.sh  validate_agent_state.py  worktree_stage
src/: __init__.py
src/config/: claude_mcp.example.json  supervisor_loop.conf
src/loop/: __init__.py  bootstrap.py
src/loop/cli/: __init__.py  app.py  (+3 more)
src/prompts/: developer_backlog.md  developer_review.md  loop_context.md  maintenance_reflect.md  merge_fallback.md  merge_instructions.md  session.md  session_resume.md  tribune_maintenance.md  tribune_review.md
src/site/: __init__.py  __main__.py  generator.py
(+31 files in other folders)
